  * Added resetSelection() to M.SelectionListView
  * Updated jQuery Mobile to 1.0b1 (and adjusted some parts of TMP to work with this new version properly)
  * Updated underscore.js to 1.1.6
  * Removed the VERSION file, since we maintain the version in m.js -> M.version
  * Refactored alert and confirm dialog to have position dynamically calculated => always in center of the screen, even if page is scrolled. Semi-transparent background now has full page size.

** Version 0.5 - Date 03.06.2011 **

  * Fixed a bug in M.I18N
  * Added setValue() to M.LabelView
  * Added autogrow-mechanism to M.TextFieldView in combination with content binding
  * Refactored event handling (all over and over all)
  * Refactored childViews property (it's way more robust now)
  * Updated jQuery to 1.6.1
  * Updated jQuery Mobile to 1.0b1
  * Refactored content binding (1): It now uses target/property (same as events)
  * Refactored content binding (2): Added recursion, so now something like 'person.address.street' is possible
  * Added method to remove a view's child views (e.g. used in toggle view)
  * Refactored dialogs: no more rendered as page but as an overlay animated with CSS3
  * Refactored toggle view: do show/hide instead of add/remove

** Version 0.4 - Date 19.04.2011 **

  * Updated jQuery to 1.5.2
  * Updated jQuery Mobile to 1.0a4.1
  * Updated M.DatePickerView to work with latest version of JQM
  * Updated M.SelectionListView to work with latest version of JQM
  * Fixed a bug in M.ToggleView

** Version 0.3 - Date 22.02.2011 **

  * Added M.DatePickerView.
  * Added 'entryPage' property to M.Application and refactored the process of launching this first page.
  * Added bootstrapping directory (needed for some startup scripts).
  * Added jquery_mobile_plugins directory for jQM based plugins.
  * Fixed a bug with M.ListView: ID 0 of a model record was ignored due to an invalid constraint.
  * Added CouchDB Data Provider
  * Bugfixes in M.Model